--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(-45deg, #ee7752, #ba1d1d, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 30s ease infinite;
   height: 100%;
@@ -21,8 +21,26 @@ body {
 #wrapper {
   min-height: 100%;
   text-align: center;
-  padding: 150px;
+  padding: 50px 100px 0px 100px;
   margin-bottom: 70%;
+}
+
+td {
+  width: 45%;
+  padding: 20px;
+  border-top: 1px solid black;
+}
+
+th {
+  padding: 5px 20px 20px 20px;
+  border-bottom: 1px solid black;
+}
+
+table {
+  background-color: white;
+  opacity: 0.7;
+  text-align: left;
+  padding: 20px;
 }
 
 a {
@@ -46,7 +64,7 @@ input {
   max-width: 400px;
   margin: 0 auto;
   border-radius: 2px;
-  padding: 1.4rem 2rem 1.6rem;
+  padding: 1rem 1rem 1rem;
   background: rgba(57, 63, 84, 0.8);
 }
 
